cowweb/cowweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cowweb
  name: cowweb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cowweb
  template:
    metadata:
      labels:
        app: cowweb
    spec:
      containers:
        - name: cowweb
          image: ghcr.io/hhiroshell/cowweb-go/cowweb:latest
          ports:
            - name: api
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /say
              port: api
            initialDelaySeconds: 5
            periodSeconds: 10
          imagePullPolicy: Always
