cowweb/cowweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: cowweb
  name: cowweb
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: cowweb
